# rust-nes-emulator

./: .gitignore  .gitmodules  0.index.js  1.index.js  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  index.js
.circleci/: config.yml
.github/: deploy.yml
.github/workflows/: build-win.yml  deploy.yml  test.yml
desktop/: Cargo.toml
desktop/src/: main.rs
embedded/: BSP_DISCO_F769NI.lib  Cargo.toml  Makefile  build.rs  main  main.c  main.cpp  mbed.bld  mbed_config.h  memory.x  openocd.cfg  openocd.gdb  rust_nes_emulator_embedded.h
embedded/.cargo/: config
embedded/BSP_DISCO_F769NI/Drivers/BSP/Components/otm8009a/: otm8009a.c
embedded/BSP_DISCO_F769NI/Drivers/BSP/STM32F769I-Discovery/: stm32f769i_discovery.c  stm32f769i_discovery_audio.c  stm32f769i_discovery_audio.h  stm32f769i_discovery_eeprom.c  stm32f769i_discovery_eeprom.h  stm32f769i_discovery_lcd.c  stm32f769i_discovery_qspi.c  stm32f769i_discovery_qspi.h  stm32f769i_discovery_sd.c  stm32f769i_discovery_sd.h  stm32f769i_discovery_sdram.c  stm32f769i_discovery_ts.c  stm32f769i_discovery_ts.h
embedded/examples/: test_on_host.rs
embedded/for_ubuntu/: main.cpp
embedded/src/: embedded_emulator.rs  lib.rs  main.rs
roms/other/: hello.nes
src/: apu.rs  cassette.rs  cpu.rs  cpu_instruction.rs  cpu_register.rs  debugger.rs  interface.rs  lib.rs  main  main.rs  pad.rs  ppu.rs  ppu_palette_table.rs  prelude.rs  system.rs  system_apu_reg.rs  system_ppu_reg.rs  video_system.rs
src/io/: memory.rs  mod.rs  rom.rs
src/nes/: apu.rs  cassette.rs  cpu.rs  cpu_addressing.rs  cpu_instruction.rs  cpu_opcode.rs  cpu_register.rs  debugger.rs  eram.rs  erom.rs  interface.rs  mod.rs  pad.rs  ppu.rs  prom.rs  system.rs  system_apu_io_reg.rs  system_apu_reg.rs  system_ppu_reg.rs  video_system.rs  vram.rs  wram.rs
test/: Cargo.toml
test/src/: main.rs  test.rs
wasm/: Cargo.toml  index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
wasm/src/: lib.rs  main.rs
