[package]
name = "rust-nes-emulator-embedded"
version = "0.1.0"
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"

[dependencies.rust-nes-emulator]
path = "../"

[dependencies]

[lib]
path = "src/lib.rs"
name = "rust_nes_emulator_embedded"
crate-type = ["staticlib", "cdylib"]

[profile.dev]
opt-level = 2
panic = "abort"
lto = true
debug = true

[profile.release]
opt-level = 2
panic = "abort"
lto = true
debug = true

