[package]
name = "rust-nes-emulator-embedded"
version = "0.1.0"
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"

[dependencies.rust-nes-emulator]
path = "../"

[build-dependencies]
cbindgen = "0.9.1"


[dependencies]

[lib]
path = "src/lib.rs"
name = "rust_nes_emulator_embedded"
crate-type = ["staticlib"]

[profile.dev]
opt-level = 2
panic = "abort"
lto = true
debug = true

[profile.release]
opt-level = 3
debug_assertions= "no"
panic = "abort"
lto = true
debug = true

