[package]
name = "rust-nes-emulator-wasm"
version = "0.1.0"
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"

[lib]
path = "src/main.rs"
name = "rust_nes_emulator_wasm"
crate-type = ["cdylib"]

[dependencies.rust-nes-emulator]
path = "../"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

[dependencies]
wasm-bindgen = "0.2.50"